--- a/content/collections/travel_matches.yaml
+++ b/content/collections/travel_matches.yaml
@@ -1,4 +1,8 @@
+title: Travel_matches
+template: travel_matches/show
+layout: layout
 revisions: false
+route: '/travel_matches/{slug}'
 date: true
 sort_dir: desc
 date_behavior:
