--- a/content/collections/travel_soccer.yaml
+++ b/content/collections/travel_soccer.yaml
@@ -1,4 +1,8 @@
+title: Travel_soccer
+template: travel_soccer/show
+layout: layout
 revisions: false
+route: '/travel_soccer/{slug}'
 date: true
 sort_dir: desc
 date_behavior:
