--- a/content/collections/wcm_travel.yaml
+++ b/content/collections/wcm_travel.yaml
@@ -1,4 +1,8 @@
+title: Wcm_travel
+template: wcm_travel/show
+layout: layout
 revisions: false
+route: '/wcm_travel/{slug}'
 date: true
 sort_dir: desc
 date_behavior:
