--- a/resources/blueprints/collections/travel_matches/travel_matches.yaml
+++ b/resources/blueprints/collections/travel_matches/travel_matches.yaml
@@ -29,6 +29,17 @@ sections:
           listable: hidden
           instructions_position: above
           read_only: false
+      -
+        handle: price
+        field:
+          input_type: text
+          antlers: false
+          display: Price
+          type: text
+          icon: text
+          listable: hidden
+          instructions_position: above
+          read_only: false
   sidebar:
     display: Sidebar
     fields:
